Fixed spacing issues in about, contact-us, property-details page

--- a/src/Components/Home/GetToKnow/ListProperty/ListProperty.css
+++ b/src/Components/Home/GetToKnow/ListProperty/ListProperty.css
@@ -80,6 +80,8 @@
     width: 30%;
     text-align: center;
     padding:5px 2px;
+    margin-top:auto;
+    margin-bottom:auto;
 }
 
 .propertyForOptions div{
